@@ -1,2 +1,7 @@
 # sachi
 Sachi board game
+
+
+# Running
+at command line: java --module-path /usr/share/openjfx/lib --add-modules=javafx.controls -jar sachi.jar
+
